--- a/RayTracingCS/RayTracingCS.csproj
+++ b/RayTracingCS/RayTracingCS.csproj
@@ -2,9 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <UseWPF>true</UseWPF>
-   <DisableWinExeOutputInference>true</DisableWinExeOutputInference>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
 
