--- a/RayTracingCS.UnitTests/RayTracingCS.UnitTests.csproj
+++ b/RayTracingCS.UnitTests/RayTracingCS.UnitTests.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
-  </PropertyGroup>
+  </PropertyGroup>net5
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
